Installation
***********************************************
See INSTALL file for details

Changelog
***********************************************
Version 0.109-r2
	core:
		New:
			- New CMake (required version 2.6)) build system now used;
			- Added q4wine.desktop file;
			- New core class;

		Experemental:
			- Temporary winetricks support;

		Fixed:
			- Fixed icon options edit error: "Debug: Parameter count mismatch";
			- Fixed regression at icon options edit;
			- Removed q4wine.pro;
			  (Note: qmake now deprecated, use cmake)
			- updated INSTALL text file;

Version 0.109-r1
	core:
		New:
			- Russian translation by Pavel Zinin (pashazz)

		Fixed:
			- Fixed icon add error: "Debug: Parameter count mismatch";
			- Fixed spaces in Program path and Worcking directory errors;
			- Removed src.pro;
			- Added INSTALL text file;

Version 0.109
	gui
		New:
			- New CD image manager;
			- New CD mount menu style;
			- TrayIcon now shows and hide q4wine when double clicking on it;

		Fixed:
			- Removed mount point and cd image settings at Icon Settings;
			- Fixed prefix toolbar click crush;
			- Fixed some English mistakes ;)
			- Updated Ukrainian translation;
			- Fixed icons show update at context menu request;

	core
		New:
			- CD mount detection;
			- Database version updater;

		Fixed:
			- Prefix setup bug with mount point and mount drive;
			- Numerious fixes and code reorganization;
			- Prefix Settings abd Prefix Wizard now use /etc/fstab instead of /proc/diskstats;
			- Fixed QTranslator i18n settings load;

Version 0.108
	core
		New:
			- Fake drive wizard creates 'autostart' folder.

		Fixed:
			- Copy issue.

Version 0.107
	core
		New:
			- Updated Ukrainian translation.
			- Added en_us dummy translation (Nead professional English translation).
			- Added ru_ru dummy translation (Nead professional Russian translation).

	core
		Fixed:
			- Updated database creation wizard.
			- CHANGED default database and config files location.