@@ -66,7 +66,8 @@ void winetricks::run_winetricks(){
 		// If we have any conslope parametres, we gona preccess them one by one
 		QStringList cons_args = console_args.split(" ");
 		for (int i=0; i<cons_args.count(); i++){
-			args.append(cons_args.at(i));
+			if (!cons_args.at(i).isEmpty())
+				args.append(cons_args.at(i));
 		}
 	}
 	
@@ -82,7 +83,6 @@ void winetricks::run_winetricks(){
 		arg.append(m_ui->lstMain->currentItem()->text());
 
 	args.append(arg);
-        qDebug()<<args;
 
 	Process *exportProcess = new Process( args, console_bin, QDir::homePath(), tr("Running winetricks..."), tr("Plz wait..."));
 
@@ -98,35 +98,32 @@ void winetricks::run_winetricks(){
 void winetricks::downloadwinetricks () {
     //check if winetricks exists
 
+	QStringList args;
+	if (!console_args.isEmpty()){
+		// If we have any conslope parametres, we gona preccess them one by one
+		QStringList cons_args = console_args.split(" ");
+		for (int i=0; i<cons_args.count(); i++){
+			if (!cons_args.at(i).isEmpty())
+				args.append(cons_args.at(i));
+		}
+	}
 
+	args.append(core->getSettingValue("system", "sudo"));
+	args.append(core->getSettingValue("system", "sh"));
+	args.append("-c");
+	QString arg;
+		arg.append("wget http://kegel.com/wine/winetricks -O /usr/bin/winetricks && chmod +x /usr/bin/winetricks");
+	args.append(arg);
+	qDebug()<<args;
 
-QStringList args;
-        if (!console_args.isEmpty()){
-                // If we have any conslope parametres, we gona preccess them one by one
-                QStringList cons_args = console_args.split(" ");
-                for (int i=0; i<cons_args.count(); i++){
-                        args.append(cons_args.at(i));
-                }
-        }
-        args.append(core->getWhichOut("sudo"));
-        args.append(core->getSettingValue("system", "sh"));
-        args.append("-c");
-        QString arg;
-        arg.append("wget http://kegel.com/wine/winetricks -O /usr/bin/winetricks && chmod +x /usr/bin/winetricks");
-        args.append(arg);
-        qDebug()<<args;
+	Process *exportProcess = new Process( args, console_bin, QDir::homePath(), tr("Downloading and installing winetricks..."), tr("Plz wait..."));
 
-        Process *exportProcess = new Process( args, console_bin, QDir::homePath(), tr("Downloading and installing winetricks..."), tr("Plz wait..."));
-
-        if (exportProcess->exec()==QDialog::Accepted){
-            QString winetricks_bin = core->getWhichOut("winetricks");
-
-
-                accept();
-        } else {
-                reject();
-        }
-
+	if (exportProcess->exec()==QDialog::Accepted){
+		QString winetricks_bin = core->getWhichOut("winetricks");
+		accept();
+	} else {
+		reject();
+	}
 }
 
 
